# o3de

./: CMakeLists.txt  LICENSE.txt  engine.json
Deadhaus_Sonata/: CMakeLists.txt  EngineFinder.cmake  game.cfg  project.json
Deadhaus_Sonata/Code/: CMakeLists.txt  deadhaus_sonata_files.cmake  deadhaus_sonata_shared_files.cmake  runtime_dependencies.cmake  server_dependencies.cmake  tool_dependencies.cmake
Deadhaus_Sonata/Code/Source/: Deadhaus_SonataModule.cpp  Deadhaus_SonataSystemComponent.cpp  Deadhaus_SonataSystemComponent.h
Deadhaus_Sonata/Config/: shader_global_build_options.json
Deadhaus_Sonata/Gem/: gem.json
Deadhaus_Sonata/Gem/Code/: CMakeLists.txt  deadhaus_sonata_editor_files.cmake  deadhaus_sonata_files.cmake  deadhaus_sonata_files_common.cmake  deadhaus_sonata_shared_files.cmake  enabled_gems.cmake  runtime_dependencies.cmake  tool_dependencies.cmake  tool_dependencies_windows.cmake
Deadhaus_Sonata/Materials/Types/: HairMomentGeneration.azsl  HairMomentGeneration.shader  Hair_Apc.materialtype  Hair_Apc_DepthPass_WithPS.azsl  Hair_Apc_VS_Common.azsli  (+35 more)
Deadhaus_Sonata/Passes/: GenericCopyImage.pass  MainPipeline_NoHair.pass  PassTemplates.azasset  TransparentRefractive.pass  TransparentRefractiveDepthWrite.pass  TransparentRefractiveMergeOutput.pass  TransparentRefractiveParent.pass
Deadhaus_Sonata/Registry/: assets_scan_folders.setreg
Deadhaus_Sonata/ShaderLib/: RayTracingSceneSrg.srgi  scenesrg.srgi
Deadhaus_Sonata/Shaders/: SampleBlurredForTransparentRefractive.azsl  TransparentRefractiveDepthWrite.azsl  TransparentRefractiveMergeOutput.azsl
(+1126 files in other folders)
